# Django_2020

travel_site/: .gitignore  manage.py  pyproject.toml
travel_site/myadmin/: forms.py  urls.py  views.py
travel_site/myadmin/templates/: add_ticket.html  tables.html
travel_site/static/css/: stylesheet.css
travel_site/tasks/: celery.py  tasks.py
travel_site/tests/: test_travel_site.py
travel_site/travel_site/: settings.py  urls.py  wsgi.py
travel_site/users/: forms.py  helper.py  models.py  urls.py  views.py
travel_site/users/fixtures/: users.json
travel_site/users/management/commands/: users_count.py
travel_site/users/migrations/: 0001_initial.py  0002_auto_20210228_1232.py  0003_auto_20210228_1240.py  0004_auto_20210228_1259.py  0005_person_picture.py  0006_auto_20210315_2258.py  0007_auto_20210317_1101.py  0008_auto_20210317_1114.py  0009_auto_20210319_1846.py  0010_auto_20210409_1715.py  0011_auto_20210425_2015.py  0012_place_to_go_text.py  0013_auto_20210510_0023.py
travel_site/users/templates/: air_tickets.html  attractions.html  base.html  cars.html  hotels.html  main_page.html  message.html  news.html  profile.html  restaurants.html  sign_in.html  sign_up.html  users.html
