[tool.poetry]
name = "travel_site"
version = "0.1.0"
description = ""
authors = ["Mansur Nurgaleev <mansur0158@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
Pillow = "^8.1.0"
celery = "^5.0.5"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
